# Encoding-Pipeline

./: .gitignore  Cargo.toml  docker-compose.yml
docker/: Dockerfile  Dockerfile.phase1  Dockerfile.phase2  Dockerfile.phase3  Dockerfile.phase4  Dockerfile.phase5  Dockerfile.phase6  Dockerfile.phase7  docker-compose.yml
docker/config/: pipeline.yaml
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: cache.rs  hot_reload.rs  loader.rs  mod.rs  model.rs
src/encoder/: av1an.rs  ffmpeg.rs  mkvmerge.rs  mod.rs  worker.rs
src/media/: audio.rs  mod.rs  probe.rs  subtitle.rs
src/notify/: discord.rs  mod.rs  prometheus.rs
src/queue/: dead_letter.rs  job.rs  mod.rs  redis.rs
src/validation/: codec.rs  encoder_params.rs  mod.rs  paths.rs  report.rs  schema.rs  semantic.rs
src/watcher/: folder.rs  manager.rs  mod.rs  stability.rs
