[package]
name = "encoding-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Davis <ryancraigdavis@github.com>"]
description = "A VMAF-targeted video encoding pipeline using av1an"
license = "MIT"
repository = ""

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full", "process", "signal"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# File watching
notify = { version = "8.0", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client (for Discord webhooks)
reqwest = { version = "0.11", features = ["json"] }

# Prometheus metrics
prometheus = "0.13"
hyper = { version = "1.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
strsim = "0.11"  # For Levenshtein distance in param validation
glob = "0.3"
regex = "1.10"
walkdir = "2.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
mockall = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
